finished the CRUD operations for message but without the resever id

--- a/Bidayat/main_app/templates/base.html
+++ b/Bidayat/main_app/templates/base.html
@@ -11,8 +11,10 @@
   <header>
     <nav>
       <ul>
-        <li><a href="{% url 'home' %}">Cat Collector</a></li>
+        <li><a href="{% url 'home' %}">Home</a></li>
           <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'message_index' %}">Messages</a></li>
+          <li><a href="{% url 'message_create' %}">Send Message</a></li>
       </ul>
     </nav>
   </header>
