--- a/Bidayat/main_app/templates/base.html
+++ b/Bidayat/main_app/templates/base.html
@@ -11,13 +11,15 @@
   <header>
     <nav>
       <ul class="right">
-        <li><a href="{% url 'about' %}">About</a></li>
+        <li><a href="{% url 'about'  %}">About</a></li>
 
         {% if user.is_authenticated %}
+        <li><a href="{% url 'user_detail' user.id %}">Profile</a></li>
         <li><a href="{% url 'logout' %}"> Log Out </a></li>
       
-
+  
         Hi {{ user.username }}
+        
 
         {% else %}
 
