--- a/Bidayat/main_app/templates/base.html
+++ b/Bidayat/main_app/templates/base.html
@@ -9,15 +9,28 @@
 </head>
 <body>
   <header>
-    <nav>
-      <ul>
-        <li><a href="{% url 'home' %}">Cat Collector</a></li>
-          <li><a href="{% url 'about' %}">About</a></li>
-      </ul>
-    </nav>
+
+    <div class="navbar">
+      <a href="{% url 'home' %}">Home</a>
+      <a href="{% url 'works_create' %}">Add Work</a>
+      <a href="{% url 'about' %}">About</a>
+      <div class="dropdown">
+        <button class="dropbtn">Categories </button>
+        <div class="dropdown-content">
+          {% for category in categories %} 
+          <a href="{% url 'categoryworks' category.id %}">{{ category.name }}</a>
+          {% endfor %}
+        </div>
+      </div> 
+    </div>
+
+    
+
+
   </header>
   <main>
     {% block content %}
+
     {% endblock %}
   </main>
 </body>
