--- a/Bidayat/main_app/static/css/style.css
+++ b/Bidayat/main_app/static/css/style.css
@@ -8,3 +8,15 @@
 body{
   background-color: antiquewhite;
 }
+
+nav{
+  background-color: rgb(112, 137, 137);
+}
+
+.tbl{
+  text-decoration: none !important;
+}
+
+label{
+  color: blue;
+}
