--- a/Bidayat/main_app/templates/registration/signup.html
+++ b/Bidayat/main_app/templates/registration/signup.html
@@ -19,5 +19,11 @@
 
   <input type="submit" class="btn" value="Signup">
 </form>
-
+<script>
+  
+let typeFle = document.getElementById('id_type')
+M.FormSelect.init(typeFle)
+let serviceFle = document.getElementById('id_service')
+M.FormSelect.init(serviceFle)
+</script>
 {% endblock %}
