--- a/Bidayat/main_app/templates/registration/signup.html
+++ b/Bidayat/main_app/templates/registration/signup.html
@@ -21,9 +21,9 @@
 </form>
 <script>
   
-let typeFle = document.getElementById('id_type')
-M.FormSelect.init(typeFle)
-let serviceFle = document.getElementById('id_service')
-M.FormSelect.init(serviceFle)
+let typeFile = document.getElementById('id_type')
+M.FormSelect.init(typeFile)
+let serviceFile = document.getElementById('id_service')
+M.FormSelect.init(serviceFile)
 </script>
 {% endblock %}
