--- a/Bidayat/main_app/templates/detail/user_update.html
+++ b/Bidayat/main_app/templates/detail/user_update.html
@@ -3,10 +3,16 @@
 {% block content %}
 {% load static %}
 
-<img width="100px" height="100px" src="{% static profile.image|cut:'main_app/static/' %}" alt=""/>
 
 
+
+
+<div>
+  {%load static %}
+  <img width="100px" height="100px" src="{% static profile.image|cut:'main_app/static/' %}" alt=""/>
 </div>
+
+
 
 <form method="POST" action="{% url 'user_update' user.id %}" enctype="multipart/form-data">
   {% csrf_token %}
@@ -14,21 +20,20 @@
   {{ profile_form.type }}
   {{ profile_form.service }}
 
-  <img width="100px" height="100px" src="https://i.natgeofe.com/n/548467d8-c5f1-4551-9f58-6817a8d2c45e/NationalGeographic_2572187_square.jpg" alt=""/>
 
-  
-  <div>
-
-
-
-    
+  <div class="form-group">
+    <label for="id_file">File Upload:</label>
+    <input type="file" name="file" id="id_file">
+  </div>
   <input type="submit" class="btn" value="Update">
-  <script>
-    let typeFile = document.getElementById('id_type')
-    M.FormSelect.init(typeFile)
-    let serviceFile = document.getElementById('id_service')
-    M.FormSelect.init(serviceFile)
-  </script>
+  <a href="{% url 'user_detail' user.id %}">Cancel</a>
+
 </form>
+<script>
+  let typeFile = document.getElementById('id_type')
+  M.FormSelect.init(typeFile)
+  let serviceFile = document.getElementById('id_service')
+  M.FormSelect.init(serviceFile)
+</script>
 
 {% endblock %}
