--- a/Bidayat/main_app/templates/main_app/work_form.html
+++ b/Bidayat/main_app/templates/main_app/work_form.html
@@ -8,13 +8,22 @@
   <h1>Add Work</h1>
 {% endif %}
 
-<form action="" method="post">
+<form action="" method="post" enctype="multipart/form-data">
   {% csrf_token %}
   <table>
-    {{ form.as_table }}
+    {{ form.title.label_tag }} {{ form.title }}
+    {{ form.description.label_tag }} {{ form.description }}
+    {{ form.worktype.label_tag }} {{ form.worktype }}
+    {{ form.category.label_tag }} {{ form.category }}
+    <input type="file" name="images" accept="image/*" multiple>
   </table>
   <input type="submit" value="Submit" class="btn">
 </form>
 
 
+
+<script>
+  let categoryFle = document.getElementById('id_category')
+  M.FormSelect.init(categoryFle)
+  </script> 
 {% endblock %}
