--- a/Bidayat/main_app/templates/works/detail.html
+++ b/Bidayat/main_app/templates/works/detail.html
@@ -2,22 +2,27 @@
 
 {% block content %}
 
-<h1> {{ work.title }} </h1>
+<h1>{{ work.title }}</h1>
 
-
-    <div>
+<div>
     <p>Description: {{ work.description }}</p>
-    <p> Type: {{ work.worktype }} </p>
-    <p> Category: {{ work.category }} </p>
+    <p>Type: {{ work.worktype }}</p>
+    <p>Category: {{ work.category }}</p>
+   
+    
+    {%load static %}
+    {% for work_image in work.images.all %}7
+    {% with image_path=work_image.image.url|cut:'main_app/' %}
+    <img src="{{ image_path }}" alt="Work Image">
+    {% endwith %}
+    {% endfor %}
 
 
-  </div>
+</div>
 
-  <div>
+<div>
     <a href="{% url 'works_update' work.id %}">Edit</a>
     <a href="{% url 'works_delete' work.id %}">Delete</a>
-
-
-  </div>
+</div>
 
 {% endblock %}
