Created Sign Up Navigation

--- a/Bidayat/main_app/templates/base.html
+++ b/Bidayat/main_app/templates/base.html
@@ -45,7 +45,7 @@
         {% else %}
 
         <a href="{%  url 'login' %}"> Login </a>
-        <a href="{%  url 'signup' %}"> Sign Up </a>
+        <a href="{%  url 'popup' %}"> Sign Up </a>
 
 
         {% endif %}
