--- a/Bidayat/main_app/templates/categories/detail.html
+++ b/Bidayat/main_app/templates/categories/detail.html
@@ -7,7 +7,7 @@
 
     <div>
       {% load static %}
-      <img width="50%" src="{% static category.image|cut:'main_app/static/' %}" />
+      <img width="50%" src="{% static category.image|cut:'main_app/static/' %}" alt=""/>
     </div>
 
 
