--- a/Bidayat/main_app/templates/categories/index.html
+++ b/Bidayat/main_app/templates/categories/index.html
@@ -15,7 +15,7 @@
 
     <div>
       {% load static %}
-      <img width="100px" height="100px" src="{% static category.image|cut:'main_app/static/' %}" />
+      <img width="100px" height="100px" src="{% static category.image|cut:'main_app/static/' %}" alt=""/>
     </div>
 
 
