add work page style done

--- a/Bidayat/main_app/templates/index.html
+++ b/Bidayat/main_app/templates/index.html
@@ -2,8 +2,47 @@
 
 {% block content %}
 
-<h1> Home Page </h1>
+<!-- <div class="bgImage">
+  <div class="overlay"></div>
+
+  <div class="content">
+  <h1>Please Work</h1>
+  <p> ajaslkdlkd asdlkahdlks aldkhalkhda aldkaldh eodjmd;; djjddd d asdlkahdlks aldkhald asdlkahdlks aldkhald asdlkahdlks aldkhal</p>
+  <button>Explore Now</button>
+
+</div>
+</div> -->
+<div id="container">
+  <div id="slideshow">
+    <img src="https://i.imgur.com/spgkEKC.jpg" alt>
+    <img src="https://i.imgur.com/m9Ty6WR.jpg" alt>
+    <img src="https://i.imgur.com/p5WPJCv.jpg" alt>
+    <img src="https://i.imgur.com/WT80O2V.jpg" alt>
+    <img src="https://i.imgur.com/UboBKJ7.jpg" alt>
 
 
+
+  </div>
+</div>
+
+
+
+
+
+<div class="aboutus">
+  <img src="../static/images/symbol.png" alt="logo" width="20" >
+</div>
+
+<div class="aboutus1">
+ <div class="left aboutus-left"> <img src="../static/images/b.png" alt="logo" width="145" ></div>
+ <div class="right aboutus-right"> 
+  <h1>About us</h1>
+
+  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p></div>
+
+</div>
+
+
+  
 
 {% endblock %}
