--- a/Bidayat/main_app/templates/main_app/work_form.html
+++ b/Bidayat/main_app/templates/main_app/work_form.html
@@ -17,4 +17,9 @@
 </form>
 
 
+<script>
+  let categoryFle = document.getElementById('id_category')
+  M.FormSelect.init(categoryFle)
+  </script>
+
 {% endblock %}
