--- a/Bidayat/main_app/templates/main_app/messages_list.html
+++ b/Bidayat/main_app/templates/main_app/messages_list.html
@@ -2,28 +2,8 @@
 
 {% block content %}
 <h3>Inbox</h3>
-<!-- <table>
-  <thead>
-    <tr>
-        <th>Sender</th>
-        <th>Email</th>
-        <th>Event Type</th>
-        <th></th>
-
-    </tr>
-  </thead>
-  {% for message in messages_list %}
-  <tbody>
-    <tr>
-      <td>{{message.sender}}</td>
-      <td>{{message.email}}</td>
-      <td>{{message.eventType}}</td>
-      <td><a href="{% url 'message_detail' message.id %}">More Details</a></td>
-    </tr>
-  </tbody>
-  {% endfor %}
-</table> -->
 {% for message in messages_list %}
+{% if message.reply == False %}
 <div class="col s12 m8 offset-m2 l6 offset-l3">
   <div class="card-panel grey lighten-5 z-depth-1">
     <div class="row valign-wrapper">
@@ -39,6 +19,7 @@
                 <th>Email</th>
                 <th>Event Type</th>
                 <th></th>
+                <th></th>
         
             </tr>
           </thead>
@@ -47,17 +28,59 @@
               <td>{{message.sender}}</td>
               <td>{{message.email}}</td>
               <td>{{message.eventType}}</td>
+              <td>{{message.reply}}</td>
               <td><a href="{% url 'message_detail' message.id %}" class="btn-floating pulse"><i class="material-icons">description</i></a>
               </a></td>
             </tr>
           </tbody>
         </table>      
-
-        
       </div>
     </div>
   </div>
 </div>
+
+{% endif %}
+{% endfor %}
+
+<h3>Reply Messages</h3>
+{% for message in messages_list %}
+{% if message.reply == True %}
+<div class="col s12 m8 offset-m2 l6 offset-l3">
+  <div class="card-panel grey lighten-5 z-depth-1">
+    <div class="row valign-wrapper">
+      <div class="col s2">
+        {% load static %}
+        <img src="{%  static 'images/user.jpg' %}" class="circle responsive-img"> <!-- notice the "circle" class -->
+      </div>
+      <div class="col s10">
+        <table>
+          <thead>
+            <tr>
+                <th>Sender</th>
+                <th>Email</th>
+                <th>Event Type</th>
+                <th></th>
+                <th></th>
+        
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>{{message.sender}}</td>
+              <td>{{message.email}}</td>
+              <td>{{message.eventType}}</td>
+              <td>{{message.reply}}</td>
+              <td><a href="{% url 'message_detail' message.id %}" class="btn-floating pulse"><i class="material-icons">description</i></a>
+              </a></td>
+            </tr>
+          </tbody>
+        </table>      
+      </div>
+    </div>
+  </div>
+</div>
+
+{% endif %}
 {% endfor %}
 
 {% endblock %}
