--- a/Bidayat/main_app/templates/base.html
+++ b/Bidayat/main_app/templates/base.html
@@ -19,7 +19,7 @@
   <header>
 
     <div class="mynavbar">
-      <a href="{% url 'home' %}" class="left brand-logo"><img src="../static/images/logo.png" alt="logo" width="200" >
+      <a href="{% url 'home' %}" class="left brand-logo"><img src="https://i.ibb.co/ZcyGVxP/logo.png" alt="logo" width="200" >
         <div class="right">
       <div class="mydropdown">
         <button class="mydropbtn">Categories </button>
