--- a/Bidayat/main_app/templates/index.html
+++ b/Bidayat/main_app/templates/index.html
@@ -14,11 +14,11 @@
 </div> -->
 <div id="container">
   <div id="slideshow">
-    <img src="https://i.imgur.com/spgkEKC.jpg" alt>
-    <img src="https://i.imgur.com/m9Ty6WR.jpg" alt>
-    <img src="https://i.imgur.com/p5WPJCv.jpg" alt>
-    <img src="https://i.imgur.com/WT80O2V.jpg" alt>
-    <img src="https://i.imgur.com/UboBKJ7.jpg" alt>
+    <img src="https://i.ibb.co/FWM91wp/photo-1519657502999-ab785d28a1f6.jpg" />
+    <img src="https://i.ibb.co/m5mF0ZX/m9Ty6WR.jpg" />
+    <img src="https://i.ibb.co/qCsxgSN/photo-1519225421980-715cb0215aed.jpg" />
+    <img src="https://i.ibb.co/1mcd6XS/photo-1523521803700-b3bcaeab0150.jpg" />
+    <img src="https://i.ibb.co/0XBrLJ5/photo-1625075963372-7320c2cca6f3.jpg" />
 
 
 
