--- a/Bidayat/main_app/templates/registration/login.html
+++ b/Bidayat/main_app/templates/registration/login.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h1>Login</h1>
+<div class="addwork-header">
+  <div class="addwork-symbol"><img src="https://i.postimg.cc/tgwQ4c6V/symbol.png"  width="20" ></div>
+ 
+  <h2>Welcome back...</h2>
+
+  <p>"Cheers to you for a job well done! No one can compare to your creativity and passion, and it's no surprise that you've become so successful."</p>
+</div>
   <div class="login-page">
     <div class="login-cont">
       <div class="form-cont">
