--- a/Bidayat/main_app/templates/registration/password_reset_done.html
+++ b/Bidayat/main_app/templates/registration/password_reset_done.html
@@ -1,3 +1,3 @@
 <h1> Thank You </h1>
 
-<p> You should receive the email shortly</p>
+<p> You should receive the email shortly </p> <a href="{%  url 'login' %}"> Login </a>
