--- a/Bidayat/main_app/templates/index.html
+++ b/Bidayat/main_app/templates/index.html
@@ -29,16 +29,46 @@
 
 
 
-<div class="aboutus">
-  <img src="../static/images/symbol.png" alt="logo" width="20" >
+<div class="home-q">
+  <img src="../static/images/symbol.png" alt="logo" width="20px" >
+  <p width="100px">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.</p>
 </div>
 
-<div class="aboutus1">
- <div class="left aboutus-left"> <img src="../static/images/b.png" alt="logo" width="145" ></div>
- <div class="right aboutus-right"> 
-  <h1>About us</h1>
 
-  <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries.</p></div>
+
+
+
+<div class="reviews-cont">
+
+  <div class="rev-h"><h1>,,</h1></div>
+  <div class="reviews">
+
+  <div class="rev2">
+    <img src="https://i.ibb.co/88YPN90/photo-1606216794074-735e91aa2c92.jpg" width="60%""/>
+
+    <p>"So thankful for Reem, she worked with me and my husband on a time constraint. Our wedding was absolutely beautiful and everything we envisioned our special day to be! "</p>
+    <p style="color: #B79549;"><b>- Bride Audery and Groom Jake</b></p>
+  <span class="signature">Audery and Jake</span>
+  </div>
+
+
+  <div class="rev1">
+    <img src="https://i.ibb.co/QC7CFP8/photo-1615500025837-cf3a8716c83d.jpg" width="61%""/>
+    <p>"We do not have anything but positive things to say about Top Event Planner! We had Maria as our coordinator, her communication was top notch! "</p>
+    <p style="color: #B79549;"><b>- Soha, Bride's Mother</b></p>
+    <span class="signature">Soha</span>
+
+
+  </div>
+
+  <div class="rev3">
+    <img src="https://i.ibb.co/XZ0zt6k/photo-1525258946800-98cfd641d0de.jpg" width="60%""/>
+    <p>"We worked with Fahad, Hanaa and their phenomenal squad for our wedding at Wyndham Hotel in Manama and our reception in the Northen Side at Hotel Maya in Long Beach.  "</p>
+    <p style="color: #B79549;"><b>- Bride Fatima and Groom Khalid</b></p>
+    <span class="signature">Fatima and Khalid</span>
+
+  </div>
+  </div>
 
 </div>
 
