Added Images for profile , Work, Added Navigation

--- a/Bidayat/main_app/templates/base.html
+++ b/Bidayat/main_app/templates/base.html
@@ -42,7 +42,7 @@
         {% else %}
 
         <div class="mydropdown"><button class="mydropbtn"><a href="{%  url 'login' %}"> Login </button></a> </div>
-        <div class="mydropdown"><button class="mydropbtn"> <a href="{%  url 'signup' %}"> Sign Up </button></a> </div>
+        <div class="mydropdown"><button class="mydropbtn"> <a href="{%  url 'popup' %}"> Sign Up </button></a> </div>
 
 
         {% endif %}
