--- a/Bidayat/main_app/templates/main_app/work_form.html
+++ b/Bidayat/main_app/templates/main_app/work_form.html
@@ -22,15 +22,21 @@
 
 <div class="addwork-page">
   <div class="addwork-cont">
-    <div class="addworkform-img"><img src="https://i.postimg.cc/CxLgbTmn/whiteflower.jpg" class="addworkform-image" ></div>
+    <div class="addworkform-img"><img alt="" src="https://i.postimg.cc/CxLgbTmn/whiteflower.jpg" class="addworkform-image" ></div>
     <div class="addworkform-cont">
-<form action="" method="post">
-  {% csrf_token %}
-  <table>
-    {{ form.as_table }}
-  </table>
-  <input type="submit" value="Submit" class="btn">
-</form>
+
+      <form action="" method="post" enctype="multipart/form-data">
+        {% csrf_token %}
+        <table>
+          {{ form.title.label_tag }} {{ form.title }}
+          {{ form.description.label_tag }} {{ form.description }}
+          {{ form.worktype.label_tag }} {{ form.worktype }}
+          {{ form.category.label_tag }} {{ form.category }}
+          <input type="file" name="images" accept="image/*" multiple>
+        </table>
+        <input type="submit" value="Submit" class="btn">
+      </form>
+
 </div>
 
 </div>
@@ -42,9 +48,9 @@
   M.FormSelect.init(categoryFle)
   </script>
 
-<script>
-  let categoryFle = document.getElementById('id_category')
-  M.FormSelect.init(categoryFle)
-  </script>
 
 {% endblock %}
+
+
+
+
