--- a/Bidayat/main_app/templates/works/categoryworks.html
+++ b/Bidayat/main_app/templates/works/categoryworks.html
@@ -1,22 +1,30 @@
 {% extends 'base.html' %}
 
 {% block content %}
+  <div >
+    <h1>Work List</h1>
 
-<h1> Work List </h1>
+    <div >
+      {% for work in works %}
+        <div >
+          <div >
+            <div >
+              <div >
+                {% for work_image in work.images.all %}
+                  {% with image_path=work_image.image.url|cut:'main_app/' %}
+                    <img src="{{ image_path }}" alt="Work Image">
+                  {% endwith %}
+                {% endfor %}
+              </div>
+            </div>
+            <a href="{% url 'workdetail' work.id %}">
+              <h5 >{{ work.title }}</h5>
+            </a>
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+  </div>
 
-{% for work in works %}
-<div>
-
-<a href="{% url 'workdetail' work.id %}">
-
-<div>
-    <span class="card-title">{{ work.title }}</span>
-</div>
-</div>
-
-</a>
-{% endfor %}
-
-
-
+</style>
 {% endblock %}
