--- a/Bidayat/main_app/templates/detail/user_update.html
+++ b/Bidayat/main_app/templates/detail/user_update.html
@@ -14,17 +14,22 @@
 
 
 
-<form method="POST" action="{% url 'user_update' user.id %}" enctype="multipart/form-data">
+<form method="POST" action="{% url 'user_detail' user.id %}" enctype="multipart/form-data">
   {% csrf_token %}
   {{ user_form.as_p }}
+
+
+  {% if profile_form == C %}
   {{ profile_form.type }}
   {{ profile_form.service }}
+  
 
 
   <div class="form-group">
     <label for="id_file">File Upload:</label>
     <input type="file" name="file" id="id_file">
   </div>
+  <p><a href="{% url 'password_reset' %}">Forgot Password?</a></p>
   <input type="submit" class="btn" value="Update">
   <a href="{% url 'user_detail' user.id %}">Cancel</a>
 
