--- a/Bidayat/main_app/templates/main_app/work_form.html
+++ b/Bidayat/main_app/templates/main_app/work_form.html
@@ -12,7 +12,7 @@
 
 <div class="addwork-header">
   <div class="addwork-symbol"><img src="../static/images/symbol.png" alt="logo" width="20" ></div>
- 
+
   <h2>Let's do it together ...</h2>
 
   <p>"Cheers to you for a job well done! No one can compare to your creativity and passion, and it's no surprise that you've become so successful."</p>
@@ -40,11 +40,11 @@
 <script>
   let categoryFle = document.getElementById('id_category')
   M.FormSelect.init(categoryFle)
+
+  let usersFle = document.getElementById('id_users')
+  M.FormSelect.init(usersFle)
   </script>
 
-<script>
-  let categoryFle = document.getElementById('id_category')
-  M.FormSelect.init(categoryFle)
-  </script>
+
 
 {% endblock %}
