Upated-User-Page

--- a/Bidayat/main_app/templates/detail/user_update.html
+++ b/Bidayat/main_app/templates/detail/user_update.html
@@ -19,10 +19,11 @@
   {{ user_form.as_p }}
 
 
- 
+  {% if user.type == V %}
   {{ profile_form.type }}
   {{ profile_form.service }}
 
+  {% endif %}
   
 
 
