--- a/Bidayat/main_app/static/css/style.css
+++ b/Bidayat/main_app/static/css/style.css
@@ -15,7 +15,7 @@
 body {
   margin:0;
   color: black!important;
-  background-color: #fafaf8;
+  background-color: #F5F5F3;
 }
 
 .mynavbar {
@@ -358,8 +358,8 @@ label{
 .reviews{
   display: block;
   text-align: justify;
-  margin-bottom: 10%;
   display: flex;
+  background-color: white;
   font-family: Audery-Normal;
   font-size: 20px;
   width: 100%;
@@ -396,12 +396,14 @@ label{
 .rev-h{
   display: flex;
   justify-content: center;
+  background-color: white;
 }
 
 
 .rev-h h1{
   font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   margin: auto;
+
 }
 
 /* Reviews Styling ends here */
@@ -416,4 +418,89 @@ label{
   font-family: Audery-Normal;
   font-size: 32px;
 
+}
+
+
+
+/* VIP CLIENTS Starts here */
+.vip-clients{
+  text-align: justify;
+  margin-bottom: 10%;
+  display: flex;
+  background-color: #F5F5F3;
+  width: 100%;
+  padding-left: 9%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  justify-content: center;
+  
+}
+
+.vip-heading {
+  text-align: justify;
+  display: flex;
+  background-color: #F5F5F3;
+  flex-direction: column;
+  font-family: Audery-Normal;
+  font-size: 20px;
+  width: 100%;
+  justify-content: center;
+}
+
+.vip-heading p, img{
+  margin: auto;
+}
+.vip-heading img{
+  padding-bottom: 2%;
+  padding-top: 2%;
+}
+
+
+
+.logo1 {
+  display: inline-block;
+  width: 420px;
+  padding-top: 2%;
+
+  
+}
+
+.logo2 {
+  display: inline-block;
+  width: 420px;
+  padding-top: 2%;
+ 
+}
+
+.logo3 {
+  display: inline-block;
+  width: 420px;
+  padding-top: 2%;
+  
+}
+
+.logo4 {
+  display: inline-block;
+  width: 420px;
+  padding-top: 2%;
+
+}
+
+/* VIP CLIENTS ends here */
+
+
+@import url('https://fonts.googleapis.com/css2?family=Asap&display=swap');
+
+
+
+.reveal{
+
+  transform: translateY(150px);
+  opacity: 0;
+  transition: 1s all ease;
+}
+
+.reveal.active{
+  transform: translateY(0);
+  opacity: 1;
 }
